fixes #13 	modified:   config/Migrations/20160506173400_AddImageToProblems.php 	modified:   src/Controller/Admin/ProblemsController.php 	modified:   src/Model/Table/ProblemsTable.php 	modified:   src/Template/Admin/Problems/edit.ctp 	modified:   src/Template/Admin/Problems/view.ctp 	modified:   src/Template/Layout/admin-default.ctp 	modified:   src/Template/Problems/index.ctp 	modified:   src/Template/Problems/view.ctp 	new file:   webroot/css/croppic.css 	modified:   webroot/css/global.css 	new file:   webroot/img/cropperIcons.png 	new file:   webroot/img/downloadIcon.png 	new file:   webroot/img/jobotic_bubble.png 	new file:   webroot/img/logo.png 	new file:   webroot/img/placeholder.png 	new file:   webroot/js/croppic.min.js 	modified:   webroot/js/global.js

--- a/webroot/css/global.css
+++ b/webroot/css/global.css
@@ -2,11 +2,6 @@
     margin-bottom: 15px;
 }
 
-.problem-image img {
-	max-width: 100%;
-	max-height: 200px;
-}
-
 .paginator {
 	text-align: center;
 }
@@ -16,4 +11,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+#image-upload {
+	float: right;
+	width: 480px;
+	height: 300px;
+	position:relative; /* or fixed or absolute */
 }
